# stream-conditions

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: backfill.py  fetch.py  fetch_snapshot.py
src/stream_conditions/: __init__.py  cli.py  ingest.py
src/stream_conditions/api/: app.py
src/stream_conditions/api/templates/: index.html
src/stream_conditions/features/: engineer.py
src/stream_conditions/models/: predictor.py
src/stream_conditions/sources/: gauge_registry.py  usgs.py  weather.py
src/stream_conditions/storage/: base.py  database.py  gauges.py  schema.sql  sqlite.py
tests/: test_cli.py
tests/features/: test_engineer.py
tests/models/: test_predictor.py
tests/sources/: test_gauge_registry.py  test_usgs.py  test_weather.py
tests/sources/cassettes/: gauge_register_01646500.yaml  gauge_register_02334430.yaml  usgs_get_current_02334430.yaml  usgs_get_historical_02334430.yaml  weather_get_current_buford.yaml  weather_get_forecast_buford.yaml  weather_get_historical_buford.yaml
tests/storage/: test_database.py  test_sqlite.py
