[tool.poetry]
name = "stream-conditions"
version = "0.1.0"
description = "Real-time hydrological ingestion and ML-powered fly-fishing window prediction"
authors = ["Emily <emilywrchu@gmail.com>"]
readme = "README.md"
packages = [{include = "stream_conditions", from = "src"}]

[tool.poetry.scripts]
stream-conditions = "stream_conditions.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.2"
numpy = ">=2.0"
scikit-learn = ">=1.5"
statsmodels = ">=0.14.4"
requests = "^2.32"
httpx = "^0.27"
tenacity = "^8.0"
aiosqlite = "^0.20"
fastapi = {extras = ["standard"], version = "^0.111"}
jinja2 = "^3.1"
typer = {extras = ["all"], version = ">=0.13"}
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"
pre-commit = "^3.7"
pandas-stubs = "^2.2"
types-requests = "^2.32"
vcrpy = "^8.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT"]
ignore = ["N803", "N806"]  # allow uppercase matrix/vector names in scientific code

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
